--- a/Main.html
+++ b/Main.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Main.css"< />
-        <link rel="stylesheet" href="DivConsola.css"< />
+        <link rel="stylesheet" href="Main.css"/>
+        <link rel="stylesheet" href="DivConsola.css"/>
         <title>Prueba Usb Serie</title>
 	</head>
 	
