--- a/Main.html
+++ b/Main.html
@@ -11,6 +11,7 @@
 	<body>	
         <div id="panel_de_mando">     
 			<input type="button" id="btn_enviar"/>
+			<div id="led"></div>
         </div>
     </body>    
     
